--- a/app/modules/audioplayer/components/audio-player-controls/audio-player-controls.style.scss
+++ b/app/modules/audioplayer/components/audio-player-controls/audio-player-controls.style.scss
@@ -1,6 +1,6 @@
 @import '../../../../variables';
 
-div.controls {
+div.audio-player-controls {
 
   width: 100%;
   margin: 0 auto;
